Added additional test cases.